# jinja2-fragments

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml
docs/: requirements.txt
docs/source/: basic_usage.rst  changelog.rst  conf.py  development.rst  framework_integrations.rst  index.rst  installation.rst
docs/source/api/: core.rst  fastapi.rst  flask.rst  litestar.rst  quart.rst  sanic.rst  starlette.rst
src/jinja2_fragments/: __init__.py  fastapi.py  flask.py  litestar.py  quart.py  sanic.py  starlette.py
tests/: conftest.py  test_fastapi.py  test_flask.py  test_litestar.py  test_quart.py  test_render_block.py  test_sanic.py  test_starlette.py
tests/rendered_templates/: block_with_dictionary_content.html  block_with_macros_content.html  for_loop_block.html  for_loop_block_content.html  include_block.html  include_block_override.html  include_blocks.html  multiple_blocks_all_blocks.html  multiple_blocks_full_page.html  multiple_blocks_single_block.html  nested_blocks_and_variables_content.html  nested_blocks_and_variables_full_page.html  nested_blocks_and_variables_inner.html  oob_block_and_variables_content.html  oob_block_and_variables_content_and_oob.html  simple_page.html  simple_page_content.html  simple_page_with_macro.html  simple_page_with_macro_content.html
tests/templates/: block_with_dictionary.html.jinja2  block_with_macros.html.jinja2  for_loop_block.html.jinja2  include_block.html.jinja2  include_block_auto_context.html.jinja2  include_block_override.html.jinja2  include_blocks.html.jinja2  multiple_blocks.html.jinja2  nested_blocks_and_variables.html.jinja2  oob_block_and_variables.html.jinja2  simple_page.html.jinja2  simple_page_with_macro.html.jinja2
