[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jinja2_fragments"
version = "1.8.0"
description = "Render Jinja2 template block as HTML page fragments on Python web frameworks."
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    {name = "Sergi Pons Freixes", email = "sergi@cub3.net"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Text Processing :: Markup :: HTML",
]
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "jinja2 >=3.1.0,<4.0.0"
]

[project.urls]
Homepage = "https://github.com/sponsfreixes/jinja2-fragments"
"Source Code" = "https://github.com/sponsfreixes/jinja2-fragments"
"Issue Tracker" = "https://github.com/sponsfreixes/jinja2-fragments/issues"
"Changes" = "https://github.com/sponsfreixes/jinja2-fragments/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "flake8-pyproject",
]
tests = [
    "quart >=0.18.0",
    "flask >=2.1.0",
    "fastapi >= 0.108.0",
    "sanic",
    "sanic_ext",
    "sanic_testing",
    "starlette[full] >= 0.29.0",
    "pytest",
    "pytest_asyncio",
    "litestar[standard]",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}}
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
jinja2_fragments = ["py.typed"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
